[metadata]
name = mara-singer
version = attr: mara_singer.__version__
url = https://github.com/leo-schick/mara-singer
description = Singer.io implementation for mara
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_singer
python_requires = >= 3.6
install_requires =
    singer-python>=5.9.0
    mara-app>=2.0.2
    mara-db>=4.7.0
    mara-page>=1.5.1
    mara-pipelines>=3.0.0

[options.extras_require]
test = pytest; pytest_click; mara-app>=2.2.0

[options.package_data]
mara_singer = .scripts/*
